try to reproduce ros2/rmw_fastrtps#68

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 include(${PROJECT_SOURCE_DIR}/cmake/dev/compile_example.cmake)
+compile_example(Configurability C++/Configurability USE_BOOST)
 compile_example(DeadlineQoSExample C++/DeadlineQoSExample USE_BOOST)
 compile_example(OwnershipStrengthQoSExample C++/OwnershipStrengthQoSExample USE_BOOST)
 compile_example(HelloWorldExample C++/HelloWorldExample)
